--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,8 +57,15 @@ def rxJavaVersion = '2.0.1'
 
 def daggerVersion = '2.13'
 def koin_version = '2.0.1'
+def roomVersion = "2.2.6"
 
 dependencies {
+
+    implementation "androidx.room:room-runtime:$roomVersion"
+    kapt "androidx.room:room-compiler:$roomVersion"
+
+    implementation "androidx.room:room-ktx:$roomVersion"
+
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
@@ -134,6 +141,7 @@ dependencies {
 
 
     testImplementation 'junit:junit:4.+'
+    testImplementation "androidx.room:room-testing:$roomVersion"
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
